<!--
  ~ Copyright (c) Pawel Quver 2015.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR
  ~ IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
  ~ MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
  ~ THE AUTHOR OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
  ~ EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
  ~ SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
  ~ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">SharepointMobileClient</string>
    <string name="app_login_activity_label">Sharepoint Login</string>
    <string name="app_details_activity_label">Details</string>

    <string name="app_placeholder">PLACEHOLDER_TEXT</string>

    <string name="task_id">Task ID</string>
    <string name="task_title">Task title</string>
    <string name="task_client_name">Client Name</string>
    <string name="task_client_address">Client Address</string>
    <string name="task_description">Task Description</string>
    <string name="task_client_phone">Client Phone</string>
</resources>
